--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap"
+            rel="stylesheet"
+        />
         <script src="https://pixijs.download/release/pixi.min.js"></script>
         <script src="./script/app.js" defer></script>
-        <link rel="stylesheet" href="styles/style.css"></style>
+        <link rel="stylesheet" href="styles/style.css" />
         <title>Pixi Shooter</title>
     </head>
-    <body>
-    </body>
+    <body></body>
 </html>
